--- a/wp-content/themes/inclusiva/assets/styles/components/_menu.scss
+++ b/wp-content/themes/inclusiva/assets/styles/components/_menu.scss
@@ -8,7 +8,7 @@ ul#menu-navegacion-primaria{
 		}
 
 		a{
-			@include opensans(bold);
+			@include font-family(opensans, bold);
 			text-transform: uppercase;
 			color: $brown--lighter;
 			font-size: 13px;
@@ -25,7 +25,7 @@ ul#menu-navegacion-primaria{
 				}
 				li{
 					a{
-						@include opensans(light);
+						@include font-family(opensans, light);
 						font-size: 14px;
 						text-transform: none;
 						color: $gray;
@@ -42,7 +42,7 @@ ul#menu-navegacion-primaria{
 					&.dropdown-header{
 						font-size: 13px;
 						text-transform: uppercase;
-						@include title-xs();
+						@include entry-title(xs);
 						color: $brown;
 					}
 					&.active{
@@ -68,7 +68,7 @@ ul#menu-navegacion-primaria{
 				&.dropdown{
 					a:first-of-type {
 						&:before{
-							@include fa();
+							@include fa-icon();
 							content : '\f105';
 							position: absolute;
 							right: 10px;
@@ -118,7 +118,7 @@ ul#menu-navegacion-primaria{
 					@include border-radius(0);
 					li{
 						a{
-							@include opensans(light);
+							@include font-family(opensans, light);
 							font-size: 13px;
 							text-transform: none;
 							color: $gray;
@@ -130,7 +130,7 @@ ul#menu-navegacion-primaria{
 						&.dropdown-header{
 							font-size: 10px;
 							text-transform: uppercase;
-							@include title-xs();
+							@include entry-title(xs);
 							color: $gray--light;
 						}
 						&.active{
@@ -199,7 +199,7 @@ ul#menu-navegacion-primaria{
 					padding-left: 10px;
 					padding-right: 10px;
 					span{
-						@include opensans(bold);
+						@include font-family(opensans, bold);
 						color: $white;
 						font-size: 11px;
 						padding-left: 5px;
