--- a/wp-content/themes/inclusiva/assets/styles/main.scss
+++ b/wp-content/themes/inclusiva/assets/styles/main.scss
@@ -55,6 +55,7 @@
 @import "components/_accordion"; 
 @import "components/_events"; 
 @import "components/_gravityforms"; 
+@import "components/_wp-pagenavi"; 
 @import "layouts/_header";
 @import "layouts/_sidebar";
 @import "layouts/_footer";
