--- a/wp-content/themes/inclusiva/assets/styles/layouts/_header.scss
+++ b/wp-content/themes/inclusiva/assets/styles/layouts/_header.scss
@@ -75,7 +75,7 @@ header{
 
 	&.super-header{
 		position: relative;
-		z-index: 1002;
+		//z-index: 1002;
 		border-bottom: 0px solid transparent;
 		.collapse{
 			@include make-row();
