Instasearch casi concluido

--- a/wp-content/themes/inclusiva/assets/styles/common/_global.scss
+++ b/wp-content/themes/inclusiva/assets/styles/common/_global.scss
@@ -358,6 +358,12 @@ article, figure{
     padding-top: 30px !important;
   }
 
+  #insta-search{
+    form{
+      margin-bottom: 20px;
+    }
+  }
+
 /* Páginas Especiales */
 
 .search-form{
