--- a/wp-content/themes/inclusiva/assets/styles/main.scss
+++ b/wp-content/themes/inclusiva/assets/styles/main.scss
@@ -56,6 +56,7 @@
 @import "components/_events"; 
 @import "components/_gravityforms"; 
 @import "components/_wp-pagenavi"; 
+@import "components/_preloader"; 
 @import "layouts/_header";
 @import "layouts/_sidebar";
 @import "layouts/_footer";
