Instasearch casi terminado 2

--- a/wp-content/themes/inclusiva/assets/styles/common/_global.scss
+++ b/wp-content/themes/inclusiva/assets/styles/common/_global.scss
@@ -58,6 +58,11 @@
        color: $black;
 }
 
+mark{
+  background-color: $yellow--light;
+  padding: inherit;
+}
+
 html, body{
   height: 100%;
 }
