--- a/wp-content/themes/inclusiva/assets/styles/common/_global.scss
+++ b/wp-content/themes/inclusiva/assets/styles/common/_global.scss
@@ -433,7 +433,7 @@ article, figure{
   }
 }
 
-/* SLider */
+/* Slider */
 .slider-carousel{
   width: 1140px;
   margin: 0 auto;
@@ -457,6 +457,42 @@ article, figure{
   }
 }
 
+.owl-dots {
+  margin-top: 30px;
+  text-align: center;
+  -webkit-tap-highlight-color: transparent;
+  .owl-dot{
+    display: inline-block;
+    zoom: 1;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    span{
+      width: 10px;
+      height: 10px;
+      margin: 5px 7px;
+      background: #ddd;
+      display: block;
+      -webkit-backface-visibility: visible;
+      transition: opacity .2s ease;
+      border-radius: 30px;
+    }
+    &:hover{
+      span{
+        background: white;
+      }
+    }
+    &.active{
+      cursor: default;
+      span{
+        background: tomato;
+      }
+    }
+  }
+}
 
 /* Navegación Secundaria*/
 
@@ -476,6 +512,50 @@ main{
   }
   padding-bottom: 30px;
 }
+
+
+article.post, article.media{
+    padding-bottom: 7px;
+    padding-top: 7px;
+    position: relative;
+    .media-left{
+      position: relative;
+      .icon-format{
+        position: absolute;
+        bottom: 0;
+        right: 10px;
+        a{
+          @extend .btn;
+          @extend .btn-xs;
+          @include button-variant($white, $black, transparent);
+          @include border-radius(0);
+          @include opacity(.5);
+        }
+      }
+    }
+    header{
+      h4{
+        @include entry-title(xs);
+      }
+      time{
+        font-size: 11px;
+        color: $gray--light;
+        @media(min-width: $screen-sm-min){
+          position: absolute;
+          bottom: 0;
+        }
+      }
+    }
+    &:hover{
+      .media-left{
+        .icon-format{
+          a{
+            @include fadeIn();
+          }
+        }
+      }
+    }
+  }
 
 /*
 SHARING
